--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </style>
 </head>
 <body>
-    <h1>Zufällige Zahl zwischen</h1>
+    <h1>FTX Zufällige Zahl</h1>
     <label for="zwischen">Minimal:</label>
     <input type="number" id="zwischen" min="0">
     <br>
