--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <label for="und">Maximal:</label>
     <input type="number" id="und" min="0">
     <br>
-    <label for="nachkommastellen">Nachkommastellen:</label>
+    <label for="nachkommastellen">Nachkommastellen: (max. 100)</label>
     <input type="number" id="nachkommastellen" min="0">
     <br>
     <label for="kommazahlen">Kommazahlen verwenden:</label>
